# rust-tree

./: .gitignore  Cargo.toml
benches/: my_benchmark.rs
src/: dfs.rs  main.rs  plot.rs  read.rs
